appendix/minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-service
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: minio.169.51.200.74.nip.io
      http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  number: 9000
            path: /minio(/|$)(.*)
            pathType: Prefix
